# adenpy

./: .gitignore  API_SPECIFICATION.md  CLAUDE.md  CONFIGURATION.md  INTEGRATION_GUIDE.md  LIBRARY_REFERENCE.md  LICENSE  LOCAL_DEVELOPMENT.md  MANIFEST.in  PUBLISHING.md  README.md  README_TESTING.md  USAGE_GUIDE.md  mock_backend.py  policies.yaml.example  publish.py  pyproject.toml  requirements.txt  run_basic_tests.py  version_manager.py
.github/workflows/: test.yml
ardenpy/: __init__.py  _autopatch.py  client.py  config.py  guard.py  session.py  token_usage.py  types.py
ardenpy/integrations/: __init__.py  crewai.py  langchain.py  openai.py
examples/: README.md  approval_workflows_demo.py  autogpt_integration.py  crewai_integration.py  crewai_protect_tools.py  custom_agent.py  direct_openai_integration.py  getting_started.py  langchain_integration.py  langchain_protect_tools.py  simple_agent.py  webhook_server.py
skills/: arden-setup.md
tests/: __init__.py  test_autopatch.py  test_basic.py  test_client.py  test_session.py  test_token_usage.py  test_webhook.py
