[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ardenpy"
version = "0.5.5"
description = "Runtime policy enforcement, human approval, and observability for AI agent tool calls"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arden Dev", email = "dev@arden.sh"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "security", "policy", "approval", "llm", "safety"]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "packaging>=21.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.28.0"]
openai-agents = ["openai-agents>=0.0.3"]
all = ["langchain>=0.1.0", "crewai>=0.28.0", "openai-agents>=0.0.3"]

[project.urls]
Homepage = "https://arden.sh"
Documentation = "https://arden.sh/docs"
Repository = "https://github.com/ardenhq/adenpy"
Issues = "https://github.com/ardenhq/adenpy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ardenpy*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
